Allow to configure date & time format. Choice is Standard (previous default), Iso, User readable, Local settings, Advanced. Advanced allows to specify the format in QDateTime syntax.

BUG: 134224

svn path=/trunk/extragear/graphics/digikam/; revision=586866